--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Repositório para o projeto de um backend de uma pizzaria",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./index.js",
+    "dev": "nodemon . /index.js"
   },
   "keywords": [],
   "author": "",
